--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,14 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.4.3.Final</version>
+            <version>5.4.10.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-jpamodelgen</artifactId>
+            <version>5.4.10.Final</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -52,7 +59,4 @@
             <version>2.2</version>
         </dependency>
     </dependencies>
-
-
-
 </project>
